Header presque terminé, card commencé, footer commencé

--- a/src/component/card.html
+++ b/src/component/card.html
@@ -1,12 +1,18 @@
 <article class="card">
+  <div class="contenu-card">
   <img src="{{image}}" alt="">
+  <div class="info-artiste">
+    <div class="nom-complet">
   <h3 class="card-title">{{prenom}}</h3>
   <h4 class="card-title">{{nom}}</h4>
-  
-  <ul>
+</div>
+    <ul>
     <li>Le Roi Lion</li>
     <li>Gladiator</li>
     <li>Inception</li>
     <li>Batman v Superman</li>
   </ul>
+  <a href="#">En savoir plus</a>
+  </div>
+    </div>
 </article>
