Finalisation footer, début des media queries sur les cards

--- a/src/component/footer.html
+++ b/src/component/footer.html
@@ -7,9 +7,10 @@
 <div><img src="Images/youtube.svg" alt="Youtube" width="41" height="36"></div>
 <div><img src="Images/vimeo-v.svg" alt="Vimeo" width="32" height="36"></div>
  </div>
+  <hr class="footer-separator">
  <div class="legal">
  <span class="copyright"><img src="Images/copyright.svg" alt="Copyright" width="9" height="9">
-  <p>adfb Agency. Tous droits réservés.</p></span>
+  <p>ADFB Agency. Tous droits réservés.</p></span>
 <a href="#">Protection des données</a>
 <a href="#">Mentions légales</a>
 <a href="#">Cookies</a>
