--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,7 +26,7 @@ header {
 
 body {
   background-color: black;
-  font-family: "Nexa Text", sans-serif;
+  font-family: nexa-text, sans-serif;
 }
 
 
@@ -35,8 +35,8 @@ body {
   max-width: 100%;
 }
 h3{
-  color: #898989;
-font-family: "Nexa Text";
+color: #898989;
+font-family: nexa-text, sans-serif;
 font-size: 96px;
 font-weight: 800;
 text-transform: uppercase;
@@ -57,8 +57,15 @@ line-height: 0.7;
 .card ul li {
   position: relative;
   padding-left: 28px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-top: 1px solid #898989;
+  border-radius: 0;       
 }
-
+.last{
+  border-bottom: 1px solid #898989;
+  border-radius: 0;   
+}
 .card ul li::before {
   content: "";
   position: absolute;
@@ -117,6 +124,25 @@ font-family: "Inter";
 }
 a {
   color: inherit;
+  
+}
+.more{
+  width: 230px; 
+display: flex;
+background-color: #000;
+padding: 15px 30px;
+text-decoration: none;
+justify-content: center;
+color: #FFFDFF;
+font-family: nexa-text, sans-serif;
+font-size: var(--Texte-Boutons, 20px);
+font-weight: 800;
+text-transform: uppercase;
+transition: all 0.3s ease; 
+}
+.more:hover{
+  background-color: #FFFDFF;
+  color: #000;
 }
 
 img,
@@ -131,6 +157,7 @@ footer {
   color: #FFFDFF;
   padding: 40px 20px;
   gap: 30px;
+  
 }
 
 .social-media {
@@ -190,12 +217,27 @@ font-family: "Inter";
   gap: 30px;
 }
 .card {
-  background: white;
-  max-width: 1320px;
+  background: #FFFDFF;
+  max-width: 100%;
 }
+
+.card.card-black {
+  background: black;
+  color: #FFFDFF;
+}
+
+.card.card-black .more {
+  background: #FFFDFF;
+  color: #000;
+  transition: all 0.3s ease; 
+}
+.card.card-black .more:hover {
+  background: #000;
+  color: #FFFDFF;
+}
+
 .contenu-card{
   display: flex;
- 
   gap: 30px;
 }
 .nom-complet{
@@ -207,14 +249,37 @@ padding: 0;
 }
 .info-artiste{
 display: flex;
+gap: 60px;
 flex-direction: column;
 justify-content: space-between;
 }
+/*
 .card img{
   width: 500px;
 }
-
-
+*/
+@media (max-width: 1290px) {
+ .nom-complet h3,
+  .nom-complet h4 {
+    font-size: 60px;
+    
+  }
+  .card img {
+    width: 100%;
+    max-width: 550px; /* taille intermédiaire */
+    height: auto;
+  }
+.info-artiste{
+gap: 30px;
+}
+}
+@media (max-width: 970px) {
+ .nom-complet h3,
+  .nom-complet h4 {
+    font-size: 48px;
+    line-height: 1;
+  }
+}
 @media (max-width: 900px) {
   .navbar {
     flex-direction: column;
@@ -228,8 +293,9 @@ justify-content: space-between;
 
   .nav-links li a {
     text-align: left;
-    border-left: none;
-    border-bottom: 1px solid #898989;
+    border-radius: 0px;
+    border: none;
+    border-bottom: 2px solid #898989;
     width: 100%;
   }
 
@@ -237,7 +303,10 @@ justify-content: space-between;
     margin: 30px 20px;
     gap: 20px;
   }
-
+ .card {
+    width: fit-content;
+    margin: 0 auto;
+  }
   .contenu-card {
     flex-direction: column;
     align-items: center;
@@ -270,18 +339,6 @@ justify-content: space-between;
     width: 16px;
     height: 16px;
   }
-
-  a {
-    font-size: 16px;
-    padding: 10px 20px;
-    border: 2px solid #898989;
-    border-radius: 4px;
-    text-transform: uppercase;
-    font-weight: bold;
-    display: inline-block;
-    margin-top: 20px;
-  }
-
 
   .social-media {
     gap: 24px;
