Changement divers dans le code

--- a/src/component/footer.html
+++ b/src/component/footer.html
@@ -1,11 +1,11 @@
  <div class="social-media">
-  <div><img src="Images/soundcloud.svg" alt="Soundcloud" width="45" height="36"></div>
-  <div><img src="Images/x-twitter.svg" alt="X-twitter" width="32" height="36"></div>
-  <div><img src="Images/Facebook.svg" alt="Facebook" width="36" height="36"></div>
-  <div><img src="Images/instagram.svg" alt="Instagram" width="32" height="36"></div>
-<div><img src="Images/telegram.svg" alt="Telegram" width="36" height="36"></div>
-<div><img src="Images/youtube.svg" alt="Youtube" width="41" height="36"></div>
-<div><img src="Images/vimeo-v.svg" alt="Vimeo" width="32" height="36"></div>
+  <div><img src="Images/soundcloud.svg" alt="Soundcloud" ></div>
+  <div><img src="Images/x-twitter.svg" alt="X-twitter" ></div>
+  <div><img src="Images/Facebook.svg" alt="Facebook" ></div>
+  <div><img src="Images/instagram.svg" alt="Instagram" ></div>
+<div><img src="Images/telegram.svg" alt="Telegram" ></div>
+<div><img src="Images/youtube.svg" alt="Youtube" ></div>
+<div><img src="Images/vimeo-v.svg" alt="Vimeo" ></div>
  </div>
   <hr class="footer-separator">
  <div class="legal">
