--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,11 +14,6 @@ header {
   padding: 0;
 }
 
-.logo {
-  width: 338px;
-}
-
-
 body {
   background-color: black;
   font-family: nexa-text, sans-serif;
@@ -105,6 +100,7 @@ h4 {
 
 .image-header{
   width: 100%;
+  padding: 60px;
 }
 
 
@@ -114,7 +110,7 @@ h4 {
 
 
 p { 
-font-family: "Inter";
+  font-family: "Inter";
 
 }
 a {
@@ -123,17 +119,17 @@ a {
 }
 .more{
   width: 230px; 
-display: flex;
-background-color: #000;
-padding: 15px 30px;
-text-decoration: none;
-justify-content: center;
-color: #FFFDFF;
-font-family: nexa-text, sans-serif;
-font-size: var(--Texte-Boutons, 20px);
-font-weight: 800;
-text-transform: uppercase;
-transition: all 0.3s ease; 
+  display: flex;
+  background-color: #000;
+  padding: 15px 30px;
+  text-decoration: none;
+  justify-content: center;
+  color: #FFFDFF;
+  font-family: nexa-text, sans-serif;
+  font-size: var(--Texte-Boutons, 20px);
+  font-weight: 800;
+  text-transform: uppercase;
+  transition: all 0.3s ease; 
 }
 .more:hover{
   background-color: #FFFDFF;
@@ -150,7 +146,7 @@ footer {
   align-items: center;
   background-color: #FE002A;
   color: #FFFDFF;
-  padding: 40px 20px;
+  padding: 40px 60px;
   gap: 30px;
   
 }
@@ -206,7 +202,7 @@ footer {
   text-decoration: underline;
 }
 .copyright p{
-font-family: "Inter";
+  font-family: "Inter";
 }
 
 .artistes-vedettes{
@@ -240,18 +236,18 @@ font-family: "Inter";
   gap: 30px;
 }
 .nom-complet{
-display: flex;
-flex-direction: column;
-gap: 14px;
-margin: 0;
-padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  margin: 0;
+  padding: 0;
 }
 .info-artiste{
-display: flex;
-gap: 60px;
-flex-direction: column;
-justify-content: space-between;
-width: 100%;
+  display: flex;
+  gap: 60px;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
 }
 
 @media (max-width: 1290px) {
@@ -266,7 +262,7 @@ width: 100%;
     height: auto;
   }
 .info-artiste{
-gap: 30px;
+  gap: 30px;
 }
 }
 
@@ -288,7 +284,9 @@ gap: 30px;
     border-bottom: 2px solid #898989;
     width: 100%;
   }
-
+.image-header{
+   padding: 20px;
+}
   .artistes-vedettes {
     margin: 30px 20px;
     gap: 120px;
@@ -346,4 +344,8 @@ gap: 30px;
   .social-media img {
     width: 24px;
   }
+  footer {
+  padding: 40px 30px;
+  
+}
 }
